--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <h1>Discover hidden places in the world around you</h1>
+
+    <p><a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a></p>
+
+    <video autoplay="" muted="" loop="">
+      <source src="resources/videos/excursion.mp4" type="video/mp4">
+    </video>
+
+    <h2>Your personal travel guide</h2>
+
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+    <p><img src="./resources/images/camp.jpg" alt="camp"></p>
+
+    <p><img src="./resources/images/phone.png"></p>
+
+    <h2>Coming Soon for iPhone and Android</h2>
+
+    <p><a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a></p>
 
   </body>
 </html>
