--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
 
-    <p><a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a></p>
+    <p><a class="url" href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a></p>
 
     <video autoplay="" muted="" loop="">
       <source src="resources/videos/excursion.mp4" type="video/mp4">
@@ -15,7 +15,7 @@
 
     <h2>Your personal travel guide</h2>
 
-    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p id="desc">Excursion remembers places you like, and recommends new points of interest around you.</p>
 
     <p><img src="./resources/images/camp.jpg" alt="camp"></p>
 
@@ -23,7 +23,7 @@
 
     <h2>Coming Soon for iPhone and Android</h2>
 
-    <p><a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a></p>
+    <p><a class="url" href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a></p>
 
   </body>
 </html>
