--- a/index.html
+++ b/index.html
@@ -25,5 +25,11 @@
 
     <p><a class="url" href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a></p>
 
+    <!-- footer -->
+    <div class="footer">
+      <p>© Excursion</p>
+    </div>
+
+
   </body>
 </html>
